# selenium-example

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  basic.py  context_manager.py  example.py  firefox.py  insta_bot.py  main.py  scrape_colors.py  selector.py  troubleshoot.py  using_manager.py
src/teratail/: selenium_example.py  selenium_example2.py  selenium_example3.py  selenium_example4.py
tests/: test_insta_bot.py
