[tool.poetry]
name = "selenium-example"
version = "2.1.0"
description = "Code example for selenium in python"
authors = ["demerara151 <demeraraonfire@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
