[tool.poetry]
name = "selenium-example"
version = "2.1.0"
description = "Code example for selenium in python"
authors = ["demerara151 <demeraraonfire@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.13.0"
rich = "^13.6.0"
httpx = { extras = ["brotli"], version = "^0.25.0" }
selectolax = "^0.3.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
anyio = "^4.0.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
