[tool.poetry]
name = "selenium-example"
version = "2.1.1"
description = "Code example for selenium in python"
authors = ["demerara151 <demeraraonfire@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.17.2"
rich = "^13.6.0"
httpx = { extras = ["brotli"], version = "^0.26.0" }
selectolax = "^0.3.18"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
anyio = "^4.0.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
